tooling/nargo_cli/tests/snapshots/execution_success/bit_not/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "four_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 0",
    "private parameters indices : [0]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (-1, _0) 4 ]"
  ],
  "debug_symbols": "TYzLCoMwEEX/ZdYuVNpF8yulSB4TGQiTMEkKJfjvjaLg8tzDPQ0cmrouxD5mUO8GIVpdKHKnBuMx5aR5p1y0FFDT6zEAsgM1z9M2gKeAoJ7j9ulghEKgdbln+vzVQtoEPNFXtjdbfuky1z9JtOiq4F46XM//AQ==",
  "file_map": {
    "50": {
      "source": "fn main(four_as_u32: u32) {\n    let four_as_u8: u8 = 4;\n    let not_four_as_u8: u8 = !four_as_u8;\n    assert_eq(not_four_as_u8, 251);\n\n    let not_four_as_u32: u32 = !four_as_u32;\n    assert_eq(not_four_as_u32, 4294967291);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
